# insider-bot-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENCE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pull_request.yml  push_main.yml
docs/: crates.js  index.html  search-index.js  settings.html  source-files.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/implementors/serenity/client/event_handler/: trait.EventHandler.js
docs/insider_bot_rs/: all.html  fn.main.html  fn.my_help.html  fn.play_insider_game.html  index.html  sidebar-items.js  static.GENERAL_GROUP.html  static.GENERAL_GROUP_OPTIONS.html  static.MY_HELP.html  static.MY_HELP_OPTIONS.html  static.PLAY_INSIDER_GAME_COMMAND.html  static.PLAY_INSIDER_GAME_COMMAND_OPTIONS.html  struct.General.html  struct.Handler.html
docs/insider_bot_rs/insider_game/: fn.get_theme.html  fn.hand_out_role.html  index.html  sidebar-items.js  struct.PlayerRole.html
docs/src/insider_bot_rs/: insider_game.rs.html  main.rs.html
scripts/: output-docs.sh
src/: insider_game.rs  main.rs  player.rs
