[package]
name = "insider-bot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.11.1", default-features = false, features = ["client", "gateway", "standard_framework", "rustls_backend", "model", "utils", "cache"] }
tokio = { version = "1.17.0", features = ["full"] }
rand = "0.6.5"
